--- a/springmvc/book_shop_mvc/book_shop_mvc/pom.xml
+++ b/springmvc/book_shop_mvc/book_shop_mvc/pom.xml
@@ -34,6 +34,25 @@
       <version>6.2.1</version>
     </dependency>
 
+    <!-- MySQL Connector/J -->
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.23</version>
+    </dependency>
+    <!-- Spring JDBC -->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+      <version>5.3.9</version>
+    </dependency>
+    <!-- Jakarta Servlet JSTL -->
+    <dependency>
+      <groupId>org.glassfish.web</groupId>
+      <artifactId>jakarta.servlet.jsp.jstl</artifactId>
+      <version>2.0.0</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>book_shop_mvc</finalName>
