--- a/springmvc/book_shop_mvc/book_shop_mvc/pom.xml
+++ b/springmvc/book_shop_mvc/book_shop_mvc/pom.xml
@@ -53,6 +53,13 @@
       <version>2.0.0</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+      <version>3.4.3</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>book_shop_mvc</finalName>
