--- a/springmvc/book_shop_mvc/book_shop_mvc/pom.xml
+++ b/springmvc/book_shop_mvc/book_shop_mvc/pom.xml
@@ -60,6 +60,32 @@
       <version>3.4.3</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-dbcp2</artifactId>
+      <version>2.8.0</version>
+    </dependency>
+
+    <!-- Hibernate Core (JPA implementation) -->
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>5.6.15.Final</version>
+    </dependency>
+
+    <!-- Spring ORM (for integrating Hibernate with Spring) -->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-orm</artifactId>
+      <version>5.3.9</version>
+    </dependency>
+
+    <dependency>
+      <groupId>javax.persistence</groupId>
+      <artifactId>javax.persistence-api</artifactId>
+      <version>2.2</version> <!-- Use javax.persistence 2.2 -->
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>book_shop_mvc</finalName>
