--- a/springmvc/book_shop_mvc/book_shop_mvc/src/main/resources/application.properties
+++ b/springmvc/book_shop_mvc/book_shop_mvc/src/main/resources/application.properties
@@ -1,4 +1,15 @@
-jdbc.url=jdbc:mysql://localhost:3306/shop_book
-jdbc.driver.class.name=com.mysql.cj.jdbc.Driver
-jdbc.username=root
-jdbc.password=root
+#jdbc.url=jdbc:mysql://localhost:3306/shop_book
+#jdbc.driver.class.name=com.mysql.cj.jdbc.Driver
+#jdbc.username=root
+#jdbc.password=root
+#
+
+spring.datasource.url=jdbc:mysql://localhost:3306/shop_book2
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
