--- a/springboot/claim/claim/src/main/resources/application.properties
+++ b/springboot/claim/claim/src/main/resources/application.properties
@@ -2,3 +2,11 @@ spring.application.name=claim
 
 # config port ?? spring chay
 server.port=8081
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/insurance_claim
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
