finish api create claim

--- a/springboot/claim/claim/src/main/resources/application.properties
+++ b/springboot/claim/claim/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+file.root.folder=D:/t3h/LJava2502/LJAVA2502/springboot/file-upload/
+file.document=claim-document/
