api create user

--- a/springboot/claim/claim/src/main/resources/application.properties
+++ b/springboot/claim/claim/src/main/resources/application.properties
@@ -13,3 +13,4 @@ spring.jpa.hibernate.ddl-auto=update
 
 file.root.folder=D:/t3h/LJava2502/LJAVA2502/springboot/file-upload/
 file.document=claim-document/
+file.image=images/
